<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:inputType="date"
        android:hint="@string/hint_for_date"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mask="##.##.####" />

    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/data" />

    <TextView
        android:id="@+id/btn_get_current_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginStart="25dp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/get_current_date"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@id/calendar"
        app:layout_constraintTop_toBottomOf="@id/calendar"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/btn_close_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="25dp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/close"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@id/calendar"
        app:layout_constraintTop_toBottomOf="@id/calendar"
        android:visibility="gone"/>

    <Spinner
        android:id="@+id/driver_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_get_current_date"
        android:visibility="gone"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/clients_recycle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/driver_list"
        app:layout_constraintBottom_toTopOf="@+id/btn_save_clients"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/btn_save_clients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/select"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>